Fix for align issue with scroll bar

--- a/components/page-claimreview/page-claimreview.less
+++ b/components/page-claimreview/page-claimreview.less
@@ -15,7 +15,7 @@ rn-claim-licensor-grid, rn-claim-country-grid{
 		}
 		tbody {
 		  max-height: 12em;
-		  overflow-y: auto;
+		  overflow-y: overlay;
 		  overflow-x: hidden;
 		}
 		th, td {
